update mixed effect model

--- a/s1/step4_computational_modeling_and_plotting.ipynb
+++ b/s1/step4_computational_modeling_and_plotting.ipynb
@@ -773,8 +773,8 @@
    "source": [
     "from matplotlib.ticker import StrMethodFormatter\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "sns.lineplot(data=book_interaction[book_interaction.order_new <=100],\n",
-    "             x=\"order_new\",\n",
+    "sns.lineplot(data=book_interaction[book_interaction.order <=100],\n",
+    "             x=\"order\",\n",
     "             y=\"overall\", errorbar=(\"se\", 2.576),err_style=\"bars\",\n",
     "              marker=\"o\",\n",
     "             dashes=True, color=sns.color_palette(\"flare\")[-1])\n",
@@ -813,7 +813,7 @@
     }
    ],
    "source": [
-    "r_res = pearsonr(book_interaction.order_new, book_interaction.overall)\n",
+    "r_res = pearsonr(book_interaction.order, book_interaction.overall)\n",
     "print(r_res)\n",
     "print(r_res.confidence_interval(confidence_level=0.99))"
    ]
@@ -848,8 +848,8 @@
    "source": [
     "from matplotlib.ticker import StrMethodFormatter\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "sns.lineplot(data=book_interaction[book_interaction.order_new <=100],\n",
-    "             x=\"order_new\",\n",
+    "sns.lineplot(data=book_interaction[book_interaction.order <=100],\n",
+    "             x=\"order\",\n",
     "             y=\"avg_rating\", errorbar=(\"se\", 2.576),err_style=\"bars\",\n",
     "              marker=\"o\",\n",
     "             dashes=True, color=sns.color_palette(\"flare\")[-1])\n",
@@ -879,7 +879,7 @@
     }
    ],
    "source": [
-    "r_res = pearsonr(book_interaction.order_new, book_interaction.avg_rating)\n",
+    "r_res = pearsonr(book_interaction.order, book_interaction.avg_rating)\n",
     "print(r_res)\n",
     "print(r_res.confidence_interval(confidence_level=0.99))"
    ]
@@ -947,8 +947,8 @@
    "source": [
     "from matplotlib.ticker import StrMethodFormatter\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "sns.lineplot(data=book_interaction[book_interaction.order_new <=100],\n",
-    "             x=\"order_new\",\n",
+    "sns.lineplot(data=book_interaction[book_interaction.order <=100],\n",
+    "             x=\"order\",\n",
     "             y=\"step_size_after\", errorbar=(\"se\",  2.576),err_style=\"bars\",\n",
     "             marker=\"o\",\n",
     "             dashes=True, color=sns.color_palette(\"flare\")[-1])\n",
@@ -978,7 +978,7 @@
     }
    ],
    "source": [
-    "r_res = pearsonr(book_interaction[~book_interaction.step_size_after.isna()].order_new, \n",
+    "r_res = pearsonr(book_interaction[~book_interaction.step_size_after.isna()].order, \n",
     "                 book_interaction[~book_interaction.step_size_after.isna()].step_size_after)\n",
     "print(r_res)\n",
     "print(r_res.confidence_interval(confidence_level=0.99))"
@@ -1197,27 +1197,6 @@
     "mu2 = book_interaction.step_size_after.mean()\n",
     "std2 = book_interaction.step_size_after.std()\n",
     "se2 = std2/np.sqrt(book_interaction.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "cb431e0f-4a65-4427-be1d-6b8504e79d72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1921256, 30)"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "book_interaction.shape"
    ]
   },
   {
